{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 78,
  "lineage": "da237cc5-5564-0145-fff8-41639e691356",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:internet-gateway/igw-0f5c48cb2a3862173",
            "id": "igw-0f5c48cb2a3862173",
            "owner_id": "152273536329",
            "tags": {
              "Name": "mysql-db-igw"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "mysql-db-igw",
              "Service": "dso_hotel_db"
            },
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:route-table/rtb-04d64f82e2c1ee394",
            "id": "rtb-04d64f82e2c1ee394",
            "owner_id": "152273536329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "dev-private-route-table",
              "Service": "dso_hotel_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:route-table/rtb-090f6eb34c4756dc3",
            "id": "rtb-090f6eb34c4756dc3",
            "owner_id": "152273536329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5c48cb2a3862173",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "dev-public-route-table",
              "Service": "dso_hotel_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a19e5f015ceab5d",
            "route_table_id": "rtb-04d64f82e2c1ee394",
            "subnet_id": "subnet-0f8276dba47bc12af"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c68d5761e0c866f",
            "route_table_id": "rtb-04d64f82e2c1ee394",
            "subnet_id": "subnet-01bf2780d7cb6af01"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0626840c21eac8e33",
            "route_table_id": "rtb-090f6eb34c4756dc3",
            "subnet_id": "subnet-03c7d3c7587598d6d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:security-group/sg-08457450fc7eda117",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08457450fc7eda117",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS traffic",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "152273536329",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Service": "dso_hotel_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:security-group/sg-02a7ad47ddf07fb07",
            "description": "Allow inbound/outbound MySQL traffic",
            "egress": [],
            "id": "sg-02a7ad47ddf07fb07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound MySQL connections",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08457450fc7eda117"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-rds-sg",
            "name_prefix": "",
            "owner_id": "152273536329",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Service": "dso_hotel_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic",
            "from_port": 0,
            "id": "sgrule-1434395190",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08457450fc7eda117",
            "security_group_rule_id": "sgr-0cd5c6524b7cbaa1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_in_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTPS traffic",
            "from_port": 8090,
            "id": "sgrule-3434386921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08457450fc7eda117",
            "security_group_rule_id": "sgr-0f52f962b86f625c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound MySQL connections",
            "from_port": 3306,
            "id": "sgrule-2807674718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a7ad47ddf07fb07",
            "security_group_rule_id": "sgr-0164742b9b6e04905",
            "self": false,
            "source_security_group_id": "sg-08457450fc7eda117",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.rds_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgrule-1548653678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08457450fc7eda117",
            "security_group_rule_id": "sgr-08ed3e2fd4b104549",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:subnet/subnet-0f8276dba47bc12af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8276dba47bc12af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152273536329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-a"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "dev-private-subnet-a",
              "Service": "dso_hotel_db"
            },
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:subnet/subnet-01bf2780d7cb6af01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bf2780d7cb6af01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152273536329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-b"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "dev-private-subnet-b",
              "Service": "dso_hotel_db"
            },
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:subnet/subnet-03c7d3c7587598d6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c7d3c7587598d6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152273536329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-a"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "dev-public-subnet-a",
              "Service": "dso_hotel_db"
            },
            "vpc_id": "vpc-0a501b792a424f503"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152273536329:vpc/vpc-0a501b792a424f503",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03021f6e94952469d",
            "default_route_table_id": "rtb-0b3e45422d0350fff",
            "default_security_group_id": "sg-0824dfb5f97b41d86",
            "dhcp_options_id": "dopt-0b8e0ad9c99868049",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a501b792a424f503",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3e45422d0350fff",
            "owner_id": "152273536329",
            "tags": {
              "Name": "mysql-db-vpc"
            },
            "tags_all": {
              "CreatedBy": "NadavZ",
              "Environment": "dev",
              "Name": "mysql-db-vpc",
              "Service": "dso_hotel_db"
            }
          }
        }
      ]
    }
  ]
}